LIST OF CHANGES
---------------

release 62.1.0
 - allow non consented human split for GBS runs
 - allow analysis of single-end runs with non-consented human split

release 62.0.4
 - fix tag 888 bug in force markdup_method:samtools for single-end runs

release 62.0.3
 - always use markdup_method:samtools in stage2 analysis for single-end runs

release 62.0.2
 - Adjust bam_flagstats QC check invocation in seq_alignment for nonconsented
   human split and XA/Y human splits
     nchs: always use --skip_markdup_metrics
     XA/Y splits: use --skip_markdup_metrics in the same way as the target subset

release 62.0.1
 - Prevent the file glob expansion by the shell when calling a loader
   for the run parameters XML file. A non-existing file might be passed
   to the loader.

release 62.0.0
 - Add substitution metrics to the seq alignment command.
 - Removed provisions for loading the old warehouse, the function
   for loading the old warehouse was removed some time ago.
 - Extended the ml warehouse loader job. For all warehouse loader jobs
   that are run prior to setting the 'qc complete' run status an extra
   script is invoked; it loads the content of RunParameters.xml Illumina
   file to the warehouse to facilitate automatic billing.  

release 61.2.0
 - Added a new pipeline function - archive_irods_locations_to_ml_warehouse

release 61.1.0
 - Heron artic full primer version will be uploaded to Majora.

release 61.0.0
 - Reverse logic for SamHaplotag in the seq. alignment function:
   --revcomp flag - should be used when is_i5_opposite attribute is false.
 - When loading main pipeline product to iRODS, added an option to create
   files recording the location of these products.  In future these files
   will be used to load the iRODS locations to the ml warehouse.
 - Purge Net::AMQP::RabbitMQ and message notification system used for UKB
   Vanguard

release 60.6.0
 - Fixed bugs in autoqc checks validation for the npg_run_is_deletable