@@ -436,6 +436,11 @@ sub _alignment_command { ## no critic (Subroutines::ProhibitExcessComplexity)
         $p4_param_vals->{primer_clip_bed} = $pcb;
         $self->info(qq[No markdup with primer panel: $pcb]);
       }
+      elsif($do_gbs_plex &&
+            (my $gbb=npg_pipeline::cache::reference->instance->get_gbs_plex_bed_file($dp, $self->repository))) {
+        $p4_param_vals->{primer_clip_bed} = $gbb;
+        $self->info(qq[No markdup with gbs primer panel : $gbb]);
+      }
       else {
         $p4_param_vals->{primer_clip_method} = q[no_clip];
         $self->info(q[No markdup, no primer panel]);
